[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.isort]
profile = "black"

[project]
name = "stable-diffusion"
version = "0.1.0"
description = "Lightning Stable Diffusion"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "accelerate>=1.7",
  "diffusers>=0.33.1",
  "jsonargparse[signatures]>=4.39",
  "lightning>=2.5.1.post0",
  "pre-commit>=4.2",
  "torch>=2.7",
  "torchmetrics>=1.7.1",
  "torchvision>=0.22",
  "transformers>=4.51.3",
  "xformers>=0.0.30",
]
